# wildfire-VIP

./: .gitignore  README.md  cnn_combined_train_inf.py  cnn_inf.py  cnn_train.py  cnn_training.py  test_set_filenames.txt
WildfireRenderer/WildfireOpenGL/: WildfireOpenGL.sln  WildfireOpenGL.vcxproj  WildfireOpenGL.vcxproj.filters  fire_frag.frag  fire_vert.vert  glad.c  main.cpp
candle/: candle_combined_train_inf.py  candle_inf.py
cs3451-computer-graphics-starter-code/assignments/a1/: CMakeLists.txt
cs3451-computer-graphics-starter-code/assignments/test/: CMakeLists.txt  main.cpp
genericFire/: genericFire_inf.py  genericFire_test_set_filenames.txt  genericFire_train.py
simplex/: .gitignore  .gitlab-ci.yml  README.md  discovery_make.py  make_project.py
simplex/docs/: code-specification.md  compilation-notes-zh.md  conjugate-gradient-notes-zh.md  discovery-instructions.md  mx-dev-notes.md  overview.md  sph-dev-zh.md  vnc.md
simplex/ext/tetgen/: CMakeLists.txt
simplex/ext/tri2d/: CMakeLists.txt
simplex/proj/helloautodiff/: CMakeLists.txt
simplex/proj/helloautodiff/custom/: AutoGradForwardOptimizer.h  AutoGradReverseOptmizer.h  CMakeLists.txt  main.cpp
simplex/proj/helloautodiff/forward/: CMakeLists.txt  example-forward-jacobian-derivatives-using-eigen-with-parameters.cpp  example-forward-jacobian-derivatives-using-eigen.cpp
simplex/proj/helloautodiff/reverse/: CMakeLists.txt
simplex/script/: ani.bat  common_func.cmake  ext_config.cmake  functions.cmake  src_config.cmake
unitySim/: unitySim_inf.py  unitySim_test_set_filenames.txt  unitySim_train.py
(+218 files in other folders)
